--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   assets:
     - Assates/Images/splashccreen1.jpg
     - Assates/Images/Splashscreen2.jpeg
+    - Assates/Images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
